# python-aiml-projects

./: README.md  config.json  gitignore.txt  pyproject.toml  requirements.txt
data/: reviews_messy.csv
data/docs/: handbook.md  refund_policy.md
src/: 01_first_call.py  02_chatbot.py  03_structure_messy_data.py  04_ask_your_docs.py  05_agent.py  06_specialized_model.py
