[project]
name = "python-for-ai-demo"
version = "0.1.0"
description = "Demo scripts for the How to Learn Python for AI video"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "chromadb>=0.5",
    "transformers>=4.40",
    "torch>=2.2",
]
